--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,10 +5,6 @@
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 <style name="DatePickerTheme" parent="DatePickerBaseTheme">
-    <item name="android:textSize">25sp</item>
-</style>
-
-<style name="DatePickerTheme" parent="DatePickerBaseTheme">
-    <item name="android:colorControlNormal">#dd00ff</item>
+    <item name="android:textSize">10</item>
 </style>
 </resources>
